# kanban-board-vibe-coded

./: .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  data.db
.github/workflows/: ci.yml
backend/: AGENTS.md  data.db  pyproject.toml  requirements.txt
backend/app/: ai_schemas.py  auth.py  crud.py  database.py  deps.py  main.py  models.py  schemas.py
backend/tests/: conftest.py  test_ai_chat.py  test_auth.py  test_authorization.py  test_main.py
docs/: ANOTHER_CODE_REVIEW.md  CODE_REVIEW.md  DATABASE.md  OAUTH.md  OPENCODE_CODE_REVIEW.md  PLAN.md
frontend/: AGENTS.md  next.config.ts  playwright.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ChatSidebar.test.tsx  ChatSidebar.tsx  ErrorBoundary.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.test.tsx  KanbanCard.tsx  KanbanColumn.test.tsx  KanbanColumn.tsx  Login.test.tsx  Login.tsx
frontend/src/lib/: api.ts  auth.test.tsx  auth.tsx  kanban.test.ts  kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: start.sh  stop.sh
