[project]
name = "pm-backend"
version = "0.1.0"
description = "Backend for Project Management MVP"
authors = [{ name = "placeholder", email = "you@example.com" }]

# using uv package manager
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic",
    "openai",
    "pytest",
    "pytest-mock",
]

[tool.uv]
